interpolation looks good

--- a/tutorials/simulate-image.ipynb
+++ b/tutorials/simulate-image.ipynb
@@ -52,7 +52,7 @@
     "# Image simulator imports\n",
     "import cryojax.simulator as cs\n",
     "from cryojax.image import operators as op\n",
-    "from cryojax.image import rfftn, irfftn, make_frequencies"
+    "from cryojax.image import fftn, rfftn, irfftn, make_frequencies"
    ]
   },
   {
@@ -80,8 +80,8 @@
    "source": [
     "# Read template into either an ElectronCloud or ElectronGrid\n",
     "#density = cs.RealVoxelGrid.from_file(filename, crop_scale=0.9)\n",
-    "density = cs.VoxelCloud.from_file(filename)\n",
-    "#density = cs.FourierVoxelGrid.from_file(filename, pad_scale=1.5)\n",
+    "#density = cs.VoxelCloud.from_file(filename)\n",
+    "density = cs.FourierVoxelGrid.from_file(filename, pad_scale=1.)\n",
     "pose = cs.EulerPose(offset_x=20.0, offset_y=-30.0, view_phi=-20., view_theta=70., view_psi=20.)\n",
     "specimen = cs.Specimen(density=density, pose=pose)"
    ]
@@ -103,8 +103,8 @@
     "shape = (64, 65)\n",
     "pixel_size = 4.4  # Angstroms\n",
     "manager = cs.ImageManager(shape, pixel_size, pad_scale=1.5)\n",
-    "scattering = cs.NufftProject(manager, eps=1e-5)\n",
-    "#scattering = cs.FourierSliceExtract(manager)"
+    "#scattering = cs.NufftProject(manager, eps=1e-5)\n",
+    "scattering = cs.FourierSliceExtract(manager, interpolation_order=1)"
    ]
   },
   {
@@ -183,6 +183,16 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig, ax = plt.subplots()\n",
+    "plot_image(jnp.log10(jnp.abs(fftn(scattering_model(key)))), fig, ax)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -234,13 +244,6 @@
     "whitened_model = cs.ImagePipeline(scattering=scattering, specimen=specimen, instrument=instrument_d, filter=filter, mask=mask)\n",
     "plot_image(whitened_model(), fig, ax)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
