diverge further from the API in order to allow for caching

--- a/tutorials/simulate-image.ipynb
+++ b/tutorials/simulate-image.ipynb
@@ -81,7 +81,7 @@
     "# Read template into either an ElectronCloud or ElectronGrid\n",
     "#density = cs.RealVoxelGrid.from_file(filename, crop_scale=0.9)\n",
     "#density = cs.VoxelCloud.from_file(filename)\n",
-    "density = cs.FourierVoxelGrid.from_file(filename, pad_scale=1.)\n",
+    "density = cs.FourierVoxelGrid.from_file(filename, pad_scale=1.1)\n",
     "pose = cs.EulerPose(offset_x=20.0, offset_y=-30.0, view_phi=-20., view_theta=70., view_psi=20.)\n",
     "specimen = cs.Specimen(density=density, pose=pose)"
    ]
@@ -100,9 +100,9 @@
    "outputs": [],
    "source": [
     "# Configure the image formation process\n",
-    "shape = (64, 65)\n",
+    "shape = (64, 64)\n",
     "pixel_size = 4.4  # Angstroms\n",
-    "manager = cs.ImageManager(shape, pixel_size, pad_scale=1.5)\n",
+    "manager = cs.ImageManager(shape, pixel_size, pad_scale=1)\n",
     "#scattering = cs.NufftProject(manager, eps=1e-5)\n",
     "scattering = cs.FourierSliceExtract(manager, interpolation_order=1)"
    ]
