last commit didnt go through fully

--- a/tutorials/simulate-image.ipynb
+++ b/tutorials/simulate-image.ipynb
@@ -104,7 +104,7 @@
     "pixel_size = 4.4  # Angstroms\n",
     "manager = cs.ImageManager(shape, pixel_size, pad_scale=1)\n",
     "#scattering = cs.NufftProject(manager, eps=1e-5)\n",
-    "scattering = cs.FourierSliceExtract(manager, interpolation_order=3, interpolation_mode=\"fill\")"
+    "scattering = cs.FourierSliceExtract(manager, interpolation_order=1, interpolation_mode=\"fill\")"
    ]
   },
   {
@@ -144,7 +144,7 @@
    "outputs": [],
    "source": [
     "# Then, choose a model for the solvent\n",
-    "solvent = cs.GaussianIce(variance=op.FourierExp(amplitude=4.0, scale=10.5))"
+    "solvent = cs.GaussianIce(variance=op.FourierExp2D(amplitude=4.0, scale=10.5))"
    ]
   },
   {
