--- a/tutorials/simulate-micrograph.ipynb
+++ b/tutorials/simulate-micrograph.ipynb
@@ -126,7 +126,7 @@
     "def compute_micrograph(specimen, scattering, instrument):\n",
     "    \"\"\"Build the model and compute the superposition.\"\"\"\n",
     "    pipeline = cs.ImagePipeline(specimen, scattering, instrument)\n",
-    "    is_vmap = lambda x: isinstance(x, cs.Pose)\n",
+    "    is_vmap = lambda x: isinstance(x, cs.AbstractPose)\n",
     "    to_vmap = jax.tree_util.tree_map(is_vmap, pipeline, is_leaf=is_vmap)\n",
     "    vmap, novmap = eqx.partition(pipeline, to_vmap)\n",
     "    return compute_stack_and_sum(vmap, novmap)"
