exposure and pipeline no longer violate the equinox abstract/final pattern

--- a/tutorials/simulate-helix.ipynb
+++ b/tutorials/simulate-helix.ipynb
@@ -146,7 +146,7 @@
     "scattering = cs.FourierSliceExtract(manager)\n",
     "\n",
     "# ... instantiate the image formation models\n",
-    "simulated = cs.SuperpositionPipeline(scattering=scattering, specimen=helix.subunits)\n",
+    "simulated = cs.AssemblyPipeline(helix, scattering)\n",
     "truth = cs.ImagePipeline(scattering=scattering, specimen=true_assembly)"
    ]
   },
