--- a/tutorials/simulate-image.ipynb
+++ b/tutorials/simulate-image.ipynb
@@ -52,7 +52,8 @@
     "# Image simulator imports\n",
     "import cryojax.simulator as cs\n",
     "from cryojax.image import operators as op\n",
-    "from cryojax.image import fftn, rfftn, irfftn, make_frequencies"
+    "from cryojax.image import fftn, rfftn, irfftn\n",
+    "from cryojax.coordinates import make_frequencies"
    ]
   },
   {
