add a way to filter fourier volumes

--- a/tutorials/simulate-image.ipynb
+++ b/tutorials/simulate-image.ipynb
@@ -79,10 +79,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "op.Lowpass(make_frequencies((64, 64, 64), half_space=False))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Read template into either an ElectronCloud or ElectronGrid\n",
     "#density = cs.RealVoxelGrid.from_file(filename, crop_scale=0.9)\n",
     "#density = cs.VoxelCloud.from_file(filename)\n",
-    "density = cs.FourierVoxelGrid.from_file(filename, pad_scale=1.4)\n",
+    "density = cs.FourierVoxelGrid.from_file(filename, pad_scale=1.0)\n",
     "pose = cs.EulerPose(offset_x=5.0, offset_y=-3.0, view_phi=-20., view_theta=70., view_psi=45.)\n",
     "specimen = cs.Specimen(density=density, pose=pose)"
    ]
