make AssemblyPipeline store the assembly. need to vmap over constructors

--- a/tutorials/simulate-helix.ipynb
+++ b/tutorials/simulate-helix.ipynb
@@ -118,7 +118,7 @@
     "true_assembly = cs.Specimen(density=assembly_density, pose=pose)\n",
     "\n",
     "# ... initialize the Helix\n",
-    "helix = cs.Helix(subunit=initial_subunit, pose=pose, rise=rise, twist=twist, n_start=n_start, n_subunits_per_start=n_subunits_per_start)"
+    "helix = cs.Helix(subunit=initial_subunit, pose=pose, rise=rise, twist=twist, n_start=n_start, n_subunits=n_subunits_per_start*n_start)"
    ]
   },
   {
@@ -147,7 +147,7 @@
     "\n",
     "# ... instantiate the image formation models\n",
     "simulated = cs.AssemblyPipeline(helix, scattering)\n",
-    "truth = cs.ImagePipeline(scattering=scattering, specimen=true_assembly)"
+    "truth = cs.ImagePipeline(true_assembly, scattering)"
    ]
   },
   {
@@ -161,13 +161,6 @@
     "fig, axes = plot_images([im1, im2, im1-im2], labels=[\"Cryojax Assembly\", \"Ground truth\", \"Difference map\"])\n",
     "plt.tight_layout()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
