--- a/tutorials/simulate-micrograph.ipynb
+++ b/tutorials/simulate-micrograph.ipynb
@@ -82,7 +82,7 @@
    "outputs": [],
    "source": [
     "# Now, instantiate the poses\n",
-    "poses = cs.QuaternionPose.from_rotation_and_translation(rotations, translations)\n",
+    "poses = jax.vmap(lambda R, t: cs.QuaternionPose.from_rotation_and_translation(R, t))(rotations, translations)\n",
     "\n",
     "# ... load the ElectronDensity and ScatteringModel\n",
     "filename = \"../tests/data/3j9g_bfm1_ps4_4.mrc\"\n",
