accept different padding in each dimension in ImageManager. small fixes in helical assembly code.

--- a/tutorials/simulate-helix.ipynb
+++ b/tutorials/simulate-helix.ipynb
@@ -58,9 +58,10 @@
     "    fig.colorbar(im, cax=cax)\n",
     "    return fig, ax\n",
     "\n",
+    "\n",
     "def plot_images(images, labels=None, **kwargs):\n",
     "    nimages = len(images)\n",
-    "    fig, axes = plt.subplots(ncols=nimages, figsize=(4*nimages, 6))\n",
+    "    fig, axes = plt.subplots(ncols=nimages, figsize=(4 * nimages, 6))\n",
     "    if nimages == 1:\n",
     "        axes = [axes]\n",
     "    for idx, ax in enumerate(axes):\n",
@@ -69,6 +70,7 @@
     "        if labels is not None:\n",
     "            ax.set(title=labels[idx])\n",
     "    return fig, axes\n",
+    "\n",
     "\n",
     "def plot_net(theta, z, **kwargs):\n",
     "    fig, ax = plt.subplots(figsize=(4, 4))\n",
@@ -97,8 +99,10 @@
     "# Helical parameters\n",
     "rise = 21.94532431  # Angstroms\n",
     "twist = 29.571584705551697  # Degrees\n",
-    "n_start = 6 # Start number\n",
-    "r_0 = jnp.asarray([-88.70895129, 9.75357114, 0.0], dtype=float)  # Displacement of initial subunit\n",
+    "n_start = 6  # Start number\n",
+    "r_0 = jnp.asarray(\n",
+    "    [-88.70895129, 9.75357114, 0.0], dtype=float\n",
+    ")  # Displacement of initial subunit\n",
     "n_subunits_per_start = 2  # Number of subunits per sub-helix"
    ]
   },
@@ -109,16 +113,29 @@
    "outputs": [],
    "source": [
     "# Initialize density distributions and center of mass pose\n",
-    "subunit_density = cs.FourierVoxelGrid.from_file(subunit_filename, pad_scale=1.2)\n",
-    "assembly_density = cs.FourierVoxelGrid.from_file(assembly_filename, pad_scale=1.2)\n",
-    "pose = cs.EulerPose(offset_x=0.0, offset_y=0.0, view_phi=0.0, view_theta=0.0, view_psi=0.0)\n",
+    "subunit_density = cs.FourierVoxelGrid.from_file(\n",
+    "    subunit_filename, pad_scale=1.2\n",
+    ")\n",
+    "assembly_density = cs.FourierVoxelGrid.from_file(\n",
+    "    assembly_filename, pad_scale=1.2\n",
+    ")\n",
+    "pose = cs.EulerPose(\n",
+    "    offset_x=0.0, offset_y=0.0, view_phi=0.0, view_theta=0.0, view_psi=0.0\n",
+    ")\n",
     "\n",
     "# ... initialize the Specimen\n",
     "initial_subunit = cs.Specimen(density=subunit_density, pose=cs.EulerPose(*r_0))\n",
     "true_assembly = cs.Specimen(density=assembly_density, pose=pose)\n",
     "\n",
     "# ... initialize the Helix\n",
-    "helix = cs.Helix(subunit=initial_subunit, pose=pose, rise=rise, twist=twist, n_start=n_start, n_subunits=n_subunits_per_start*n_start)"
+    "helix = cs.Helix(\n",
+    "    subunit=initial_subunit,\n",
+    "    pose=pose,\n",
+    "    rise=rise,\n",
+    "    twist=twist,\n",
+    "    n_start=n_start,\n",
+    "    n_subunits=n_subunits_per_start * n_start,\n",
+    ")"
    ]
   },
   {
@@ -158,7 +175,10 @@
    "source": [
     "# Plot models\n",
     "im1, im2 = simulated.render(), truth.render()\n",
-    "fig, axes = plot_images([im1, im2, im1-im2], labels=[\"Cryojax Assembly\", \"Ground truth\", \"Difference map\"])\n",
+    "fig, axes = plot_images(\n",
+    "    [im1, im2, im1 - im2],\n",
+    "    labels=[\"Cryojax Assembly\", \"Ground truth\", \"Difference map\"],\n",
+    ")\n",
     "plt.tight_layout()"
    ]
   }
