--- a/tutorials/simulate-image.ipynb
+++ b/tutorials/simulate-image.ipynb
@@ -33,6 +33,7 @@
     "from matplotlib import pyplot as plt\n",
     "from mpl_toolkits.axes_grid1 import make_axes_locatable\n",
     "\n",
+    "\n",
     "def plot_image(image, fig, ax, cmap=\"gray\", label=None, **kwargs):\n",
     "    im = ax.imshow(image, cmap=cmap, origin=\"lower\", **kwargs)\n",
     "    divider = make_axes_locatable(ax)\n",
@@ -80,10 +81,12 @@
    "outputs": [],
    "source": [
     "# Read template into either an ElectronCloud or ElectronGrid\n",
-    "#density = cs.RealVoxelGrid.from_file(filename, crop_scale=0.9)\n",
-    "#density = cs.VoxelCloud.from_file(filename)\n",
+    "# density = cs.RealVoxelGrid.from_file(filename, crop_scale=0.9)\n",
+    "# density = cs.VoxelCloud.from_file(filename)\n",
     "density = cs.FourierVoxelGrid.from_file(filename, pad_scale=2)\n",
-    "pose = cs.EulerPose(offset_x=0.0, offset_y=15.0, view_phi=0., view_theta=90., view_psi=0.)\n",
+    "pose = cs.EulerPose(\n",
+    "    offset_x=0.0, offset_y=15.0, view_phi=0.0, view_theta=90.0, view_psi=0.0\n",
+    ")\n",
     "specimen = cs.Specimen(density=density, pose=pose)"
    ]
   },
@@ -104,8 +107,10 @@
     "shape = (64, 64)\n",
     "pixel_size = 4.4  # Angstroms\n",
     "manager = cs.ImageManager(shape, pixel_size, pad_scale=2)\n",
-    "#scattering = cs.NufftProject(manager, eps=1e-5)\n",
-    "scattering = cs.FourierSliceExtract(manager, interpolation_order=1, interpolation_mode=\"fill\")"
+    "# scattering = cs.NufftProject(manager, eps=1e-5)\n",
+    "scattering = cs.FourierSliceExtract(\n",
+    "    manager, interpolation_order=1, interpolation_mode=\"fill\"\n",
+    ")"
    ]
   },
   {
@@ -122,13 +127,15 @@
    "outputs": [],
    "source": [
     "# Initialize the instrument\n",
-    "ctf = cs.CTF(defocus_u=10000.0, defocus_v=10000.0, amplitude_contrast=.07)\n",
+    "ctf = cs.CTF(defocus_u=10000.0, defocus_v=10000.0, amplitude_contrast=0.07)\n",
     "optics = cs.CTFOptics(ctf)\n",
     "exposure = cs.Exposure(dose=op.Constant(10.0))\n",
     "detector = cs.GaussianDetector(variance=op.Constant(1.0))\n",
     "instrument_s = cs.Instrument(exposure=exposure)\n",
     "instrument_o = cs.Instrument(exposure=exposure, optics=optics)\n",
-    "instrument_d = cs.Instrument(exposure=exposure, optics=optics, detector=detector)"
+    "instrument_d = cs.Instrument(\n",
+    "    exposure=exposure, optics=optics, detector=detector\n",
+    ")"
    ]
   },
   {
@@ -162,9 +169,15 @@
    "outputs": [],
    "source": [
     "# Image formation models\n",
-    "scattering_model = cs.ImagePipeline(scattering=scattering, specimen=specimen, instrument=instrument_s)#, solvent=solvent)\n",
-    "optics_model = cs.ImagePipeline(scattering=scattering, specimen=specimen, instrument=instrument_o)#, solvent=solvent)\n",
-    "detector_model = cs.ImagePipeline(scattering=scattering, specimen=specimen, instrument=instrument_d)#, solvent=solvent)"
+    "scattering_model = cs.ImagePipeline(\n",
+    "    scattering=scattering, specimen=specimen, instrument=instrument_s\n",
+    ")  # , solvent=solvent)\n",
+    "optics_model = cs.ImagePipeline(\n",
+    "    scattering=scattering, specimen=specimen, instrument=instrument_o\n",
+    ")  # , solvent=solvent)\n",
+    "detector_model = cs.ImagePipeline(\n",
+    "    scattering=scattering, specimen=specimen, instrument=instrument_d\n",
+    ")  # , solvent=solvent)"
    ]
   },
   {
@@ -209,17 +222,22 @@
    "outputs": [],
    "source": [
     "# Instantiate image filters\n",
-    "fig, axes = plt.subplot_mosaic(\"\"\"\n",
+    "fig, axes = plt.subplot_mosaic(\n",
+    "    \"\"\"\n",
     "AAAABBB\n",
-    "\"\"\", figsize=(6.5, 3.5))\n",
+    "\"\"\",\n",
+    "    figsize=(6.5, 3.5),\n",
+    ")\n",
     "key1, key2 = jax.random.split(jax.random.PRNGKey(1234))\n",
     "micrograph_shape = (500, 500)\n",
     "freqs = make_frequencies(micrograph_shape, pixel_size)\n",
     "fourier_micrograph = optics.evaluate(freqs) * solvent.sample(key1, freqs)\n",
-    "fourier_micrograph = manager.normalize_image(detector.sample(key2, fourier_micrograph, freqs), is_real=False)\n",
+    "fourier_micrograph = manager.normalize_image(\n",
+    "    detector.sample(key2, fourier_micrograph, freqs), is_real=False\n",
+    ")\n",
     "micrograph = irfftn(fourier_micrograph, s=micrograph_shape)\n",
     "whiten = op.WhiteningFilter(micrograph, manager.padded_shape)\n",
-    "#whiten = op.WhiteningFilter(freqs[1:, 1:], micrograph, pixel_size)\n",
+    "# whiten = op.WhiteningFilter(freqs[1:, 1:], micrograph, pixel_size)\n",
     "plot_image(micrograph, fig, axes[\"A\"], label=\"Synthetic micrograph\")\n",
     "plot_image(whiten.buffer, fig, axes[\"B\"], label=\"Whitening filter\")\n",
     "plt.tight_layout()"
@@ -240,9 +258,23 @@
    "source": [
     "# Show forward model for a whitened image\n",
     "fig, ax = plt.subplots(figsize=(3.5, 3.5))\n",
-    "filter = op.LowpassFilter(scattering.manager.padded_frequency_grid.get(), cutoff=1.0) * whiten\n",
-    "mask = op.CircularMask(scattering.manager.padded_coordinate_grid_in_angstroms.get(), radius=25 * pixel_size)\n",
-    "whitened_model = cs.ImagePipeline(scattering=scattering, specimen=specimen, instrument=instrument_d, filter=filter, mask=mask)\n",
+    "filter = (\n",
+    "    op.LowpassFilter(\n",
+    "        scattering.manager.padded_frequency_grid.get(), cutoff=1.0\n",
+    "    )\n",
+    "    * whiten\n",
+    ")\n",
+    "mask = op.CircularMask(\n",
+    "    scattering.manager.padded_coordinate_grid_in_angstroms.get(),\n",
+    "    radius=25 * pixel_size,\n",
+    ")\n",
+    "whitened_model = cs.ImagePipeline(\n",
+    "    scattering=scattering,\n",
+    "    specimen=specimen,\n",
+    "    instrument=instrument_d,\n",
+    "    filter=filter,\n",
+    "    mask=mask,\n",
+    ")\n",
     "plot_image(whitened_model(), fig, ax)"
    ]
   }
