--- a/tutorials/simulate-micrograph.ipynb
+++ b/tutorials/simulate-micrograph.ipynb
@@ -37,6 +37,7 @@
     "from matplotlib import pyplot as plt\n",
     "from mpl_toolkits.axes_grid1 import make_axes_locatable\n",
     "\n",
+    "\n",
     "def plot_image(image, fig, ax, cmap=\"gray\", label=None, **kwargs):\n",
     "    im = ax.imshow(image, cmap=cmap, origin=\"lower\", **kwargs)\n",
     "    divider = make_axes_locatable(ax)\n",
@@ -71,8 +72,12 @@
     "# ... rotations\n",
     "rotations = jax.vmap(lambda key: SO3.sample_uniform(key))(keys)\n",
     "# ... translations\n",
-    "translations = jax.vmap(lambda key: jax.random.uniform(key, (3,), minval=-image_size/2, maxval=image_size/2))(keys)\n",
-    "translations /= jnp.asarray([1.0, 1.0, image_size/2])"
+    "translations = jax.vmap(\n",
+    "    lambda key: jax.random.uniform(\n",
+    "        key, (3,), minval=-image_size / 2, maxval=image_size / 2\n",
+    "    )\n",
+    ")(keys)\n",
+    "translations /= jnp.asarray([1.0, 1.0, image_size / 2])"
    ]
   },
   {
@@ -82,7 +87,9 @@
    "outputs": [],
    "source": [
     "# Now, instantiate the poses\n",
-    "poses = jax.vmap(lambda R, t: cs.QuaternionPose.from_rotation_and_translation(R, t))(rotations, translations)\n",
+    "poses = jax.vmap(\n",
+    "    lambda R, t: cs.QuaternionPose.from_rotation_and_translation(R, t)\n",
+    ")(rotations, translations)\n",
     "\n",
     "# ... load the ElectronDensity and ScatteringModel\n",
     "filename = \"../tests/data/3j9g_bfm1_ps4_4.mrc\"\n",
@@ -117,10 +124,12 @@
     "    pipeline = eqx.combine(vmap, novmap)\n",
     "    return pipeline.render()\n",
     "\n",
+    "\n",
     "@jax.jit\n",
     "def compute_stack_and_sum(vmap, novmap):\n",
     "    \"\"\"Compute the stack and sum.\"\"\"\n",
     "    return jnp.sum(compute_image_stack(vmap, novmap), axis=0)\n",
+    "\n",
     "\n",
     "@jax.jit\n",
     "def compute_micrograph(specimen, scattering, instrument):\n",
