--- a/tutorials/test-multiatom.ipynb
+++ b/tutorials/test-multiatom.ipynb
@@ -72,23 +72,22 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
     "pixel_size = 0.4\n",
     "stdev_val = 1.0\n",
     "\n",
-    "weights = jnp.array([1.0, 0.6, 0.4, .2])\n",
-    "variances = (jnp.ones(4) * stdev_val)**2 * 10\n",
+    "weights = jnp.array([1.0, 0.6, 0.4, 0.2])\n",
+    "variances = (jnp.ones(4) * stdev_val) ** 2 * 10\n",
     "identity = jnp.array([0, 1, 2, 3, 0, 1, 2, 3])\n",
     "\n",
     "key = jax.random.PRNGKey(8675309)\n",
     "\n",
-    "coordinates = jnp.stack([jnp.arange(8), -jnp.arange(8), jnp.arange(8)]).T*2\n",
+    "coordinates = jnp.stack([jnp.arange(8), -jnp.arange(8), jnp.arange(8)]).T * 2\n",
     "print(coordinates)\n",
     "\n",
     "scattering = IndependentAtomScattering((100, 100))\n",
     "\n",
     "ac = AtomCloud(weights, coordinates, variances, identity)\n",
-    "img = ac.scatter(scattering,pixel_size)\n"
+    "img = ac.scatter(scattering, pixel_size)"
    ]
   },
   {
@@ -97,7 +96,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
     "plt.pcolor(jnp.fft.ifft2(img).real)"
    ]
   },
@@ -109,14 +107,24 @@
    "source": [
     "resolution = 1.0\n",
     "\n",
-    "specimen = cs.Specimen(density=ac, resolution = 1)\n",
+    "specimen = cs.Specimen(density=ac, resolution=1)\n",
     "\n",
     "# Initialize the image formation pipeline\n",
-    "pose = cs.EulerPose(offset_x=-50.0, offset_y=20.0, view_phi=-20, view_theta=100, view_psi=20)\n",
-    "optics = cs.CTFOptics(defocus_u=10000, defocus_v=10000, amplitude_contrast=.07)\n",
-    "ice = cs.GaussianIce(key=jax.random.PRNGKey(seed=0), variance=cs.Exp(amplitude=1.0, scale=1.0))\n",
+    "pose = cs.EulerPose(\n",
+    "    offset_x=-50.0, offset_y=20.0, view_phi=-20, view_theta=100, view_psi=20\n",
+    ")\n",
+    "optics = cs.CTFOptics(\n",
+    "    defocus_u=10000, defocus_v=10000, amplitude_contrast=0.07\n",
+    ")\n",
+    "ice = cs.GaussianIce(\n",
+    "    key=jax.random.PRNGKey(seed=0), variance=cs.Exp(amplitude=1.0, scale=1.0)\n",
+    ")\n",
     "exposure = cs.UniformExposure(N=1e5, mu=0.0)\n",
-    "detector = cs.GaussianDetector(pixel_size=resolution, key=jax.random.PRNGKey(seed=1234), variance=cs.Constant(1.0))"
+    "detector = cs.GaussianDetector(\n",
+    "    pixel_size=resolution,\n",
+    "    key=jax.random.PRNGKey(seed=1234),\n",
+    "    variance=cs.Constant(1.0),\n",
+    ")"
    ]
   },
   {
@@ -126,7 +134,9 @@
    "outputs": [],
    "source": [
     "# Compile the image formation pipeline into the PipelineState\n",
-    "state = cs.PipelineState(pose=pose, ice=ice, optics=optics, exposure=exposure, detector=detector)"
+    "state = cs.PipelineState(\n",
+    "    pose=pose, ice=ice, optics=optics, exposure=exposure, detector=detector\n",
+    ")"
    ]
   },
   {
@@ -143,9 +153,15 @@
    "outputs": [],
    "source": [
     "# Image formation models\n",
-    "scattering_model = cs.ScatteringImage(scattering=scattering, specimen=specimen, state=state)\n",
-    "optics_model = cs.OpticsImage(scattering=scattering, specimen=specimen, state=state)\n",
-    "detector_model = cs.DetectorImage(scattering=scattering, specimen=specimen, state=state)"
+    "scattering_model = cs.ScatteringImage(\n",
+    "    scattering=scattering, specimen=specimen, state=state\n",
+    ")\n",
+    "optics_model = cs.OpticsImage(\n",
+    "    scattering=scattering, specimen=specimen, state=state\n",
+    ")\n",
+    "detector_model = cs.DetectorImage(\n",
+    "    scattering=scattering, specimen=specimen, state=state\n",
+    ")"
    ]
   },
   {
@@ -156,7 +172,9 @@
    "source": [
     "# Plot scattering in fourier space\n",
     "fig, ax = plt.subplots(figsize=(3.25, 3.25))\n",
-    "im = plot_image(jnp.log10(jnp.abs(scattering_model.render(view=False))), fig, ax)\n",
+    "im = plot_image(\n",
+    "    jnp.log10(jnp.abs(scattering_model.render(view=False))), fig, ax\n",
+    ")\n",
     "plt.tight_layout()"
    ]
   },
@@ -213,8 +231,13 @@
    "source": [
     "# Show forward model for a whitened image\n",
     "fig, ax = plt.subplots(figsize=(3.5, 3.5))\n",
-    "filters = [cs.LowpassFilter(scattering.padded_shape, cutoff=0.95), cs.WhiteningFilter(scattering.padded_shape, micrograph=micrograph)]\n",
-    "filtered_model = cs.GaussianImage(scattering=scattering, specimen=specimen, state=state, filters=filters)\n",
+    "filters = [\n",
+    "    cs.LowpassFilter(scattering.padded_shape, cutoff=0.95),\n",
+    "    cs.WhiteningFilter(scattering.padded_shape, micrograph=micrograph),\n",
+    "]\n",
+    "filtered_model = cs.GaussianImage(\n",
+    "    scattering=scattering, specimen=specimen, state=state, filters=filters\n",
+    ")\n",
     "plot_image(filtered_model.render(), fig, ax)"
    ]
   },
@@ -260,6 +283,7 @@
     "    )\n",
     "    return model\n",
     "\n",
+    "\n",
     "@jax.jit\n",
     "def pipeline(pixel_size: jax.Array) -> jax.Array:\n",
     "    model = build_pipeline(pixel_size)\n",
@@ -276,7 +300,7 @@
     "fig, axes = plt.subplots(ncols=2, figsize=(8, 6))\n",
     "ax1, ax2 = axes\n",
     "plot_image(pipeline(detector.pixel_size), fig, ax1)\n",
-    "plot_image(pipeline(2*detector.pixel_size), fig, ax2)"
+    "plot_image(pipeline(2 * detector.pixel_size), fig, ax2)"
    ]
   },
   {
@@ -297,10 +321,22 @@
     "ax1, ax2, ax3 = axes\n",
     "mask = cs.CircularMask(scattering.shape)\n",
     "masks = [mask]\n",
-    "observation_model = cs.GaussianImage(scattering=scattering, specimen=specimen, state=state)\n",
+    "observation_model = cs.GaussianImage(\n",
+    "    scattering=scattering, specimen=specimen, state=state\n",
+    ")\n",
     "observed = mask(observation_model())\n",
-    "model = cs.GaussianImage(scattering=scattering, specimen=specimen, state=state, masks=masks, observed=observed)\n",
-    "simulated, observed, residuals = model.render(), model.observed, model.residuals\n",
+    "model = cs.GaussianImage(\n",
+    "    scattering=scattering,\n",
+    "    specimen=specimen,\n",
+    "    state=state,\n",
+    "    masks=masks,\n",
+    "    observed=observed,\n",
+    ")\n",
+    "simulated, observed, residuals = (\n",
+    "    model.render(),\n",
+    "    model.observed,\n",
+    "    model.residuals,\n",
+    ")\n",
     "plot_image(simulated, fig, ax1)\n",
     "plot_image(observed, fig, ax2)\n",
     "plot_image(residuals, fig, ax3)\n",
@@ -322,7 +358,7 @@
    "source": [
     "# Parameters on which to evaluate loss\n",
     "params = dict(\n",
-    "    pixel_size=detector.pixel_size+0.01, offset_z=jnp.asarray(100.0)\n",
+    "    pixel_size=detector.pixel_size + 0.01, offset_z=jnp.asarray(100.0)\n",
     ")"
    ]
   },
@@ -336,19 +372,22 @@
     "    # Build the PipelineState\n",
     "    p = eqx.tree_at(lambda p: p.offset_z, pose, params[\"offset_z\"])\n",
     "    d = eqx.tree_at(lambda d: d.pixel_size, detector, params[\"pixel_size\"])\n",
-    "    state = cs.PipelineState(\n",
-    "        pose=p, optics=optics, detector=d\n",
-    "    )\n",
+    "    state = cs.PipelineState(pose=p, optics=optics, detector=d)\n",
     "    # Build the model\n",
     "    model = cs.GaussianImage(\n",
-    "        scattering=scattering, specimen=specimen, state=state, observed=observed\n",
+    "        scattering=scattering,\n",
+    "        specimen=specimen,\n",
+    "        state=state,\n",
+    "        observed=observed,\n",
     "    )\n",
     "    return model\n",
+    "\n",
     "\n",
     "@jax.jit\n",
     "def loss(pixel_size: jax.Array) -> jax.Array:\n",
     "    model = build_loss(pixel_size)\n",
     "    return model()\n",
+    "\n",
     "\n",
     "@jax.jit\n",
     "@jax.value_and_grad\n",
