get rid of setup.py in favor of pyproject.toml. deprecation warning

--- a/tutorials/simulate-helix.ipynb
+++ b/tutorials/simulate-helix.ipynb
@@ -113,12 +113,8 @@
    "outputs": [],
    "source": [
     "# Initialize density distributions and center of mass pose\n",
-    "subunit_density = cs.FourierVoxelGrid.from_file(\n",
-    "    subunit_filename, pad_scale=1.2\n",
-    ")\n",
-    "assembly_density = cs.FourierVoxelGrid.from_file(\n",
-    "    assembly_filename, pad_scale=1.2\n",
-    ")\n",
+    "subunit_density = cs.FourierVoxelGrid.from_file(subunit_filename, pad_scale=1.2)\n",
+    "assembly_density = cs.FourierVoxelGrid.from_file(assembly_filename, pad_scale=1.2)\n",
     "pose = cs.EulerPose(\n",
     "    offset_x=0.0, offset_y=0.0, view_phi=0.0, view_theta=0.0, view_psi=0.0\n",
     ")\n",
