--- a/tutorials/simulate-micrograph.ipynb
+++ b/tutorials/simulate-micrograph.ipynb
@@ -87,9 +87,9 @@
    "outputs": [],
    "source": [
     "# Now, instantiate the poses\n",
-    "poses = jax.vmap(\n",
-    "    lambda R, t: cs.QuaternionPose.from_rotation_and_translation(R, t)\n",
-    ")(rotations, translations)\n",
+    "poses = jax.vmap(lambda R, t: cs.QuaternionPose.from_rotation_and_translation(R, t))(\n",
+    "    rotations, translations\n",
+    ")\n",
     "\n",
     "# ... load the ElectronDensity and ScatteringModel\n",
     "filename = \"../tests/data/3j9g_bfm1_ps4_4.mrc\"\n",
