--- a/tutorials/test-multiatom.ipynb
+++ b/tutorials/test-multiatom.ipynb
@@ -113,9 +113,7 @@
     "pose = cs.EulerPose(\n",
     "    offset_x=-50.0, offset_y=20.0, view_phi=-20, view_theta=100, view_psi=20\n",
     ")\n",
-    "optics = cs.CTFOptics(\n",
-    "    defocus_u=10000, defocus_v=10000, amplitude_contrast=0.07\n",
-    ")\n",
+    "optics = cs.CTFOptics(defocus_u=10000, defocus_v=10000, amplitude_contrast=0.07)\n",
     "ice = cs.GaussianIce(\n",
     "    key=jax.random.PRNGKey(seed=0), variance=cs.Exp(amplitude=1.0, scale=1.0)\n",
     ")\n",
@@ -156,12 +154,8 @@
     "scattering_model = cs.ScatteringImage(\n",
     "    scattering=scattering, specimen=specimen, state=state\n",
     ")\n",
-    "optics_model = cs.OpticsImage(\n",
-    "    scattering=scattering, specimen=specimen, state=state\n",
-    ")\n",
-    "detector_model = cs.DetectorImage(\n",
-    "    scattering=scattering, specimen=specimen, state=state\n",
-    ")"
+    "optics_model = cs.OpticsImage(scattering=scattering, specimen=specimen, state=state)\n",
+    "detector_model = cs.DetectorImage(scattering=scattering, specimen=specimen, state=state)"
    ]
   },
   {
@@ -172,9 +166,7 @@
    "source": [
     "# Plot scattering in fourier space\n",
     "fig, ax = plt.subplots(figsize=(3.25, 3.25))\n",
-    "im = plot_image(\n",
-    "    jnp.log10(jnp.abs(scattering_model.render(view=False))), fig, ax\n",
-    ")\n",
+    "im = plot_image(jnp.log10(jnp.abs(scattering_model.render(view=False))), fig, ax)\n",
     "plt.tight_layout()"
    ]
   },
@@ -278,9 +270,7 @@
     "        pose=pose, optics=optics, detector=d, ice=ice, exposure=exposure\n",
     "    )\n",
     "    # Build the model\n",
-    "    model = cs.GaussianImage(\n",
-    "        scattering=scattering, specimen=specimen, state=state\n",
-    "    )\n",
+    "    model = cs.GaussianImage(scattering=scattering, specimen=specimen, state=state)\n",
     "    return model\n",
     "\n",
     "\n",
@@ -357,9 +347,7 @@
    "outputs": [],
    "source": [
     "# Parameters on which to evaluate loss\n",
-    "params = dict(\n",
-    "    pixel_size=detector.pixel_size + 0.01, offset_z=jnp.asarray(100.0)\n",
-    ")"
+    "params = dict(pixel_size=detector.pixel_size + 0.01, offset_z=jnp.asarray(100.0))"
    ]
   },
   {
