--- a/tutorials/simulate-image.ipynb
+++ b/tutorials/simulate-image.ipynb
@@ -133,9 +133,7 @@
     "detector = cs.GaussianDetector(variance=op.Constant(1.0))\n",
     "instrument_s = cs.Instrument(exposure=exposure)\n",
     "instrument_o = cs.Instrument(exposure=exposure, optics=optics)\n",
-    "instrument_d = cs.Instrument(\n",
-    "    exposure=exposure, optics=optics, detector=detector\n",
-    ")"
+    "instrument_d = cs.Instrument(exposure=exposure, optics=optics, detector=detector)"
    ]
   },
   {
@@ -259,9 +257,7 @@
     "# Show forward model for a whitened image\n",
     "fig, ax = plt.subplots(figsize=(3.5, 3.5))\n",
     "filter = (\n",
-    "    op.LowpassFilter(\n",
-    "        scattering.manager.padded_frequency_grid.get(), cutoff=1.0\n",
-    "    )\n",
+    "    op.LowpassFilter(scattering.manager.padded_frequency_grid.get(), cutoff=1.0)\n",
     "    * whiten\n",
     ")\n",
     "mask = op.CircularMask(\n",
