get rid of convenience loaders for files. the user must use cryojax.io

--- a/tutorials/simulate-image.ipynb
+++ b/tutorials/simulate-image.ipynb
@@ -54,7 +54,8 @@
     "import cryojax.simulator as cs\n",
     "from cryojax.image import operators as op\n",
     "from cryojax.image import fftn, rfftn, irfftn\n",
-    "from cryojax.coordinates import make_frequencies"
+    "from cryojax.coordinates import make_frequencies\n",
+    "from cryojax.io import read_image_or_volume_with_spacing_from_mrc"
    ]
   },
   {
@@ -81,9 +82,8 @@
    "outputs": [],
    "source": [
     "# Read template into either an ElectronCloud or ElectronGrid\n",
-    "# density = cs.RealVoxelGrid.from_file(filename, crop_scale=0.9)\n",
-    "# density = cs.VoxelCloud.from_file(filename)\n",
-    "density = cs.FourierVoxelGrid.from_file(filename, pad_scale=2)\n",
+    "density_grid, voxel_size = read_image_or_volume_with_spacing_from_mrc(filename)\n",
+    "density = cs.FourierVoxelGrid.from_density_grid(density_grid, voxel_size, pad_scale=2)\n",
     "pose = cs.EulerPose(\n",
     "    offset_x=0.0, offset_y=15.0, view_phi=0.0, view_theta=90.0, view_psi=0.0\n",
     ")\n",
@@ -107,7 +107,6 @@
     "shape = (64, 64)\n",
     "pixel_size = 4.4  # Angstroms\n",
     "manager = cs.ImageManager(shape, pixel_size, pad_scale=2)\n",
-    "# scattering = cs.NufftProject(manager, eps=1e-5)\n",
     "scattering = cs.FourierSliceExtract(\n",
     "    manager, interpolation_order=1, interpolation_mode=\"fill\"\n",
     ")"
