--- a/tutorials/simulate-helix.ipynb
+++ b/tutorials/simulate-helix.ipynb
@@ -42,7 +42,8 @@
    "source": [
     "# Image simulator imports\n",
     "import cryojax.simulator as cs\n",
-    "from cryojax.image import fftn, irfftn"
+    "from cryojax.image import fftn, irfftn\n",
+    "from cryojax.io import read_image_or_volume_with_spacing_from_mrc"
    ]
   },
   {
@@ -113,17 +114,21 @@
    "outputs": [],
    "source": [
     "# Initialize density distributions and center of mass pose\n",
-    "subunit_density = cs.FourierVoxelGrid.from_file(subunit_filename, pad_scale=1.2)\n",
-    "assembly_density = cs.FourierVoxelGrid.from_file(assembly_filename, pad_scale=1.2)\n",
+    "# ... the voxel grid of the subunit\n",
+    "subunit_density_grid, subunit_voxel_size = read_image_or_volume_with_spacing_from_mrc(subunit_filename)\n",
+    "subunit_density = cs.FourierVoxelGrid.from_density_grid(subunit_density_grid, subunit_voxel_size, pad_scale=1.2)\n",
+    "# ... and of the whole assembly\n",
+    "assembly_density_grid, assembly_voxel_size = read_image_or_volume_with_spacing_from_mrc(assembly_filename)\n",
+    "assembly_density = cs.FourierVoxelGrid.from_density_grid(assembly_density_grid, assembly_voxel_size, pad_scale=1.2)\n",
     "pose = cs.EulerPose(\n",
     "    offset_x=0.0, offset_y=0.0, view_phi=0.0, view_theta=0.0, view_psi=0.0\n",
     ")\n",
     "\n",
-    "# ... initialize the Specimen\n",
+    "# Initialize the Specimen\n",
     "initial_subunit = cs.Specimen(density=subunit_density, pose=cs.EulerPose(*r_0))\n",
     "true_assembly = cs.Specimen(density=assembly_density, pose=pose)\n",
     "\n",
-    "# ... initialize the Helix\n",
+    "# Initialize the Helix\n",
     "helix = cs.Helix(\n",
     "    subunit=initial_subunit,\n",
     "    pose=pose,\n",
