--- a/tutorials/simulate-micrograph.ipynb
+++ b/tutorials/simulate-micrograph.ipynb
@@ -23,6 +23,7 @@
     "from functools import partial\n",
     "\n",
     "import cryojax.simulator as cs\n",
+    "from cryojax.io import read_image_or_volume_with_spacing_from_mrc\n",
     "\n",
     "config.update(\"jax_enable_x64\", False)"
    ]
@@ -93,8 +94,9 @@
     "\n",
     "# ... load the ElectronDensity and ScatteringModel\n",
     "filename = \"../tests/data/3j9g_bfm1_ps4_4.mrc\"\n",
+    "density_grid, voxel_size = read_image_or_volume_with_spacing_from_mrc(filename)\n",
     "manager = cs.ImageManager(shape, pixel_size, pad_scale=1.2)\n",
-    "density = cs.FourierVoxelGrid.from_file(filename, pad_scale=1.3)\n",
+    "density = cs.FourierVoxelGrid.from_density_grid(density_grid, voxel_size, pad_scale=1.3)\n",
     "scattering = cs.FourierSliceExtract(manager)\n",
     "\n",
     "# ... build the specimen\n",
