do not transpose when reading MRCs. just do this directly if comparing with cisTEM. rename MRC loader

--- a/tutorials/simulate-helix.ipynb
+++ b/tutorials/simulate-helix.ipynb
@@ -43,7 +43,7 @@
     "# Image simulator imports\n",
     "import cryojax.simulator as cs\n",
     "from cryojax.image import fftn, irfftn\n",
-    "from cryojax.io import read_image_or_volume_with_spacing_from_mrc"
+    "from cryojax.io import read_array_with_spacing_from_mrc"
    ]
   },
   {
@@ -115,11 +115,19 @@
    "source": [
     "# Initialize density distributions and center of mass pose\n",
     "# ... the voxel grid of the subunit\n",
-    "subunit_density_grid, subunit_voxel_size = read_image_or_volume_with_spacing_from_mrc(subunit_filename)\n",
-    "subunit_density = cs.FourierVoxelGrid.from_density_grid(subunit_density_grid, subunit_voxel_size, pad_scale=1.2)\n",
+    "subunit_density_grid, subunit_voxel_size = read_array_with_spacing_from_mrc(\n",
+    "    subunit_filename\n",
+    ")\n",
+    "subunit_density = cs.FourierVoxelGrid.from_density_grid(\n",
+    "    subunit_density_grid, subunit_voxel_size, pad_scale=1.2\n",
+    ")\n",
     "# ... and of the whole assembly\n",
-    "assembly_density_grid, assembly_voxel_size = read_image_or_volume_with_spacing_from_mrc(assembly_filename)\n",
-    "assembly_density = cs.FourierVoxelGrid.from_density_grid(assembly_density_grid, assembly_voxel_size, pad_scale=1.2)\n",
+    "assembly_density_grid, assembly_voxel_size = read_array_with_spacing_from_mrc(\n",
+    "    assembly_filename\n",
+    ")\n",
+    "assembly_density = cs.FourierVoxelGrid.from_density_grid(\n",
+    "    assembly_density_grid, assembly_voxel_size, pad_scale=1.2\n",
+    ")\n",
     "pose = cs.EulerPose(\n",
     "    offset_x=0.0, offset_y=0.0, view_phi=0.0, view_theta=0.0, view_psi=0.0\n",
     ")\n",
