--- a/tutorials/simulate-image.ipynb
+++ b/tutorials/simulate-image.ipynb
@@ -106,9 +106,9 @@
     "# Configure the image formation process\n",
     "shape = (64, 64)\n",
     "pixel_size = 4.4  # Angstroms\n",
-    "manager = cs.ImageManager(shape, pixel_size, pad_scale=2)\n",
+    "config = cs.ImageConfig(shape, pixel_size, pad_scale=2)\n",
     "scattering = cs.FourierSliceExtract(\n",
-    "    manager, interpolation_order=1, interpolation_mode=\"fill\"\n",
+    "    config, interpolation_order=1, interpolation_mode=\"fill\"\n",
     ")"
    ]
   },
@@ -229,11 +229,11 @@
     "micrograph_shape = (500, 500)\n",
     "freqs = make_frequencies(micrograph_shape, pixel_size)\n",
     "fourier_micrograph = optics.evaluate(freqs) * solvent.sample(key1, freqs)\n",
-    "fourier_micrograph = manager.normalize_image(\n",
+    "fourier_micrograph = config.normalize_image(\n",
     "    detector.sample(key2, fourier_micrograph, freqs), is_real=False\n",
     ")\n",
     "micrograph = irfftn(fourier_micrograph, s=micrograph_shape)\n",
-    "whiten = op.WhiteningFilter(micrograph, manager.padded_shape)\n",
+    "whiten = op.WhiteningFilter(micrograph, config.padded_shape)\n",
     "# whiten = op.WhiteningFilter(freqs[1:, 1:], micrograph, pixel_size)\n",
     "plot_image(micrograph, fig, axes[\"A\"], label=\"Synthetic micrograph\")\n",
     "plot_image(whiten.buffer, fig, axes[\"B\"], label=\"Whitening filter\")\n",
@@ -256,11 +256,10 @@
     "# Show forward model for a whitened image\n",
     "fig, ax = plt.subplots(figsize=(3.5, 3.5))\n",
     "filter = (\n",
-    "    op.LowpassFilter(scattering.manager.padded_frequency_grid.get(), cutoff=1.0)\n",
-    "    * whiten\n",
+    "    op.LowpassFilter(scattering.config.padded_frequency_grid.get(), cutoff=1.0) * whiten\n",
     ")\n",
     "mask = op.CircularMask(\n",
-    "    scattering.manager.padded_coordinate_grid_in_angstroms.get(),\n",
+    "    scattering.config.padded_coordinate_grid_in_angstroms.get(),\n",
     "    radius=25 * pixel_size,\n",
     ")\n",
     "whitened_model = cs.ImagePipeline(\n",
