--- a/tutorials/simulate-micrograph.ipynb
+++ b/tutorials/simulate-micrograph.ipynb
@@ -95,9 +95,9 @@
     "# ... load the ElectronDensity and ScatteringModel\n",
     "filename = \"../tests/data/3j9g_bfm1_ps4_4.mrc\"\n",
     "density_grid, voxel_size = read_array_with_spacing_from_mrc(filename)\n",
-    "manager = cs.ImageManager(shape, pixel_size, pad_scale=1.2)\n",
+    "config = cs.ImageConfig(shape, pixel_size, pad_scale=1.2)\n",
     "density = cs.FourierVoxelGrid.from_density_grid(density_grid, voxel_size, pad_scale=1.3)\n",
-    "scattering = cs.FourierSliceExtract(manager)\n",
+    "scattering = cs.FourierSliceExtract(config)\n",
     "\n",
     "# ... build the specimen\n",
     "specimen = cs.Specimen(density, poses)\n",
