--- a/tutorials/simulate-helix.ipynb
+++ b/tutorials/simulate-helix.ipynb
@@ -168,8 +168,8 @@
     "# Configure the image settings and projection method\n",
     "shape = (80, 80)\n",
     "pixel_size = assembly_density.voxel_size\n",
-    "manager = cs.ImageManager(shape, pixel_size, pad_scale=1.4)\n",
-    "scattering = cs.FourierSliceExtract(manager)\n",
+    "config = cs.ImageConfig(shape, pixel_size, pad_scale=1.4)\n",
+    "scattering = cs.FourierSliceExtract(config)\n",
     "\n",
     "# ... instantiate the image formation models\n",
     "simulated = cs.AssemblyPipeline(helix, scattering)\n",
