fixed uncessary debugging lines

--- a/tutorials/simulate-image.ipynb
+++ b/tutorials/simulate-image.ipynb
@@ -126,7 +126,7 @@
    "outputs": [],
    "source": [
     "# Initialize the instrument\n",
-    "ctf = cs.CTF(defocus_u=1000000, amplitude_contrast=0.07)\n",
+	"ctf = cs.CTF(defocus_u=10000.0, defocus_v=10000.0, amplitude_contrast=0.07)\n",
     "optics = cs.CTFOptics(ctf)\n",
     "exposure = cs.Exposure(dose=op.Constant(10.0))\n",
     "detector = cs.GaussianDetector(variance=op.Constant(1.0))\n",
@@ -231,7 +231,6 @@
     "micrograph_shape = (500, 500)\n",
     "freqs = make_frequencies(micrograph_shape, pixel_size)\n",
     "fourier_micrograph = optics.evaluate(freqs) * solvent.sample(key1, freqs)\n",
-    "print(fourier_micrograph)\n",
     "fourier_micrograph = ci.normalize_image(\n",
     "    detector.sample(key2, fourier_micrograph, freqs), is_real=False\n",
     ")\n",
@@ -285,9 +284,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "cryojax",
    "language": "python",
-   "name": "python3"
+   "name": "cryojax"
   },
   "language_info": {
    "codemirror_mode": {
@@ -299,7 +298,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.13"
+   "version": "3.11.2"
   }
  },
  "nbformat": 4,
