--- a/tutorials/fourier_insert_slice.ipynb
+++ b/tutorials/fourier_insert_slice.ipynb
@@ -2665,6 +2665,13 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": 11,
    "metadata": {},
    "outputs": [],
@@ -2719,15 +2726,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/mnt/home/gwoollard/repos/cryojax/tests\n",
-      "74.0 80.0\n"
+      "/mnt/home/gwoollard/repos/cryojax/tests\n"
      ]
     }
    ],
@@ -3123,44 +3129,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Array([[[1., 0., 0.],\n",
-       "        [0., 0., 0.],\n",
-       "        [0., 0., 0.]],\n",
-       "\n",
-       "       [[0., 0., 0.],\n",
-       "        [0., 2., 0.],\n",
-       "        [0., 0., 0.]],\n",
-       "\n",
-       "       [[0., 0., 0.],\n",
-       "        [0., 0., 0.],\n",
-       "        [0., 0., 0.]]], dtype=float64)"
-      ]
-     },
-     "execution_count": 147,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# arr = jnp.zeros((3,3,3))\n",
-    "# arr += arr.at[[0,1],[0,1],[0,1]].set([1,2])\n",
-    "# arr += arr.at[[0,1],[0,1],[0,1]].set([1,2])\n",
-    "# arr"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "code",
    "execution_count": 150,
    "metadata": {},
    "outputs": [
@@ -3520,7 +3488,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 103,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3529,61 +3497,57 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 96,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 99,
    "metadata": {},
    "outputs": [],
    "source": [
-    "slice_real = slices_f[0]\n"
+    "n_pix = 10 # shape[0]\n",
+    "\n",
+    "xy = make_coordinates((n_pix,n_pix))\n",
+    "\n",
+    "xy0 = jnp.zeros((3,n_pix**2))\n",
+    "\n",
+    "xy0 = xy0.at[0].set(xy[:,:,0].reshape(-1))\n",
+    "xy0 = xy0.at[1].set(xy[:,:,1].reshape(-1))\n",
+    "\n",
+    "R = Rotation.from_euler('zyz', [10,10,0]).as_matrix()\n",
+    "xyz_rot = R @ xy0\n",
+    "\n",
+    "r0, r1, dd = diff(xyz_rot)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 105,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(10, 128, 128)"
-      ]
-     },
-     "execution_count": 25,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "slices_f.shape"
+    "slice_real = np.ones((n_pix, n_pix)).astype(np.float64)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 110,
    "metadata": {},
    "outputs": [],
    "source": [
-    "map_3d_interp_slice, count_3d_interp_slice = interpolate.interp_vec(\n",
+    "map_3d_interp_slice, count_3d_interp_slice = interpolate.jaxy_numpy_interp_vec(\n",
     "    slice_real, r0, r1, dd, n_pix\n",
     ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 111,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "AttributeError",
-     "evalue": "module 'cryojax.utils.interpolate' has no attribute 'jaxy_interp_vec'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[27], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m jaxy_map_3d_interp_slice, jaxy_count_3d_interp_slice \u001b[38;5;241m=\u001b[39m \u001b[43minterpolate\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mjaxy_interp_vec\u001b[49m(\n\u001b[1;32m      2\u001b[0m     slice_real, r0, r1, dd, n_pix\n\u001b[1;32m      3\u001b[0m )\n",
-      "\u001b[0;31mAttributeError\u001b[0m: module 'cryojax.utils.interpolate' has no attribute 'jaxy_interp_vec'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "jaxy_map_3d_interp_slice, jaxy_count_3d_interp_slice = interpolate.jaxy_interp_vec(\n",
     "    slice_real, r0, r1, dd, n_pix\n",
@@ -3592,10 +3556,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 112,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "np.testing.assert_allclose(jaxy_map_3d_interp_slice, map_3d_interp_slice)\n"
+   ]
   }
  ],
  "metadata": {
