--- a/tutorials/simulate-helix.ipynb
+++ b/tutorials/simulate-helix.ipynb
@@ -115,26 +115,31 @@
    "source": [
     "# Initialize density distributions and center of mass pose\n",
     "# ... the voxel grid of the subunit\n",
-    "subunit_density_grid, subunit_voxel_size = read_array_with_spacing_from_mrc(\n",
+    "subunit_real_voxel_grid, subunit_voxel_size = read_array_with_spacing_from_mrc(\n",
     "    subunit_filename\n",
     ")\n",
-    "subunit_density = cs.FourierVoxelGrid.from_density_grid(\n",
-    "    subunit_density_grid, subunit_voxel_size, pad_scale=1.2\n",
+    "# ... make sure subunit sits in box at +z direction\n",
+    "subunit_potential = cs.FourierVoxelGrid.from_real_voxel_grid(\n",
+    "    jnp.transpose(subunit_real_voxel_grid, axes=[2, 1, 0]),\n",
+    "    subunit_voxel_size,\n",
+    "    pad_scale=1.2,\n",
     ")\n",
     "# ... and of the whole assembly\n",
-    "assembly_density_grid, assembly_voxel_size = read_array_with_spacing_from_mrc(\n",
+    "assembly_real_voxel_grid, assembly_voxel_size = read_array_with_spacing_from_mrc(\n",
     "    assembly_filename\n",
     ")\n",
-    "assembly_density = cs.FourierVoxelGrid.from_density_grid(\n",
-    "    assembly_density_grid, assembly_voxel_size, pad_scale=1.2\n",
+    "assembly_potential = cs.FourierVoxelGrid.from_real_voxel_grid(\n",
+    "    jnp.transpose(assembly_real_voxel_grid, axes=[2, 1, 0]),\n",
+    "    assembly_voxel_size,\n",
+    "    pad_scale=1.2,\n",
     ")\n",
     "pose = cs.EulerPose(\n",
     "    offset_x=0.0, offset_y=0.0, view_phi=0.0, view_theta=0.0, view_psi=0.0\n",
     ")\n",
     "\n",
     "# Initialize the Specimen\n",
-    "initial_subunit = cs.Specimen(density=subunit_density, pose=cs.EulerPose(*r_0))\n",
-    "true_assembly = cs.Specimen(density=assembly_density, pose=pose)\n",
+    "initial_subunit = cs.Specimen(subunit_potential, cs.EulerPose(*r_0))\n",
+    "true_assembly = cs.Specimen(assembly_potential, pose)\n",
     "\n",
     "# Initialize the Helix\n",
     "helix = cs.Helix(\n",
@@ -167,7 +172,7 @@
    "source": [
     "# Configure the image settings and projection method\n",
     "shape = (80, 80)\n",
-    "pixel_size = assembly_density.voxel_size\n",
+    "pixel_size = assembly_potential.voxel_size\n",
     "config = cs.ImageConfig(shape, pixel_size, pad_scale=1.4)\n",
     "scattering = cs.FourierSliceExtract(config)\n",
     "\n",
@@ -190,6 +195,13 @@
     ")\n",
     "plt.tight_layout()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
