--- a/tutorials/simulate-image.ipynb
+++ b/tutorials/simulate-image.ipynb
@@ -53,8 +53,6 @@
     "# Image simulator imports\n",
     "import cryojax.simulator as cs\n",
     "from cryojax.image import operators as op\n",
-    "from cryojax.image import fftn, rfftn, irfftn\n",
-    "from cryojax.coordinates import make_frequencies\n",
     "from cryojax.io import read_array_with_spacing_from_mrc"
    ]
   },
@@ -82,19 +80,21 @@
    "outputs": [],
    "source": [
     "# Read template into either an ElectronCloud or ElectronGrid\n",
-    "density_grid, voxel_size = read_array_with_spacing_from_mrc(filename)\n",
-    "density = cs.FourierVoxelGrid.from_density_grid(density_grid, voxel_size, pad_scale=2)\n",
-    "pose = cs.EulerPose(\n",
-    "    offset_x=0.0, offset_y=15.0, view_phi=0.0, view_theta=90.0, view_psi=0.0\n",
+    "real_voxel_grid, voxel_size = read_array_with_spacing_from_mrc(filename)\n",
+    "potential = cs.FourierVoxelGrid.from_real_voxel_grid(\n",
+    "    real_voxel_grid, voxel_size, pad_scale=2\n",
     ")\n",
-    "specimen = cs.Specimen(density=density, pose=pose)"
+    "pose = cs.EulerPose(\n",
+    "    offset_x=-2.0, offset_y=5.0, view_phi=-4.0, view_theta=20.0, view_psi=20.0\n",
+    ")\n",
+    "specimen = cs.Specimen(potential, pose)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Next we have to choose a scattering (or in this case, projection) method. This will depend on the ``ElectronDensity`` representation."
+    "Next we have to choose a scattering (or in this case, projection) method. This will depend on the scattering potential representation."
    ]
   },
   {
@@ -116,7 +116,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now, it's time to configure the imaging instrument. This, at minimum, requires an ``Optics`` model. Here, we also include models of the ``Exposure`` to the electron beam, and the ``Detector``. For example, by default the optics model is ``NullOptics``. Here, we configure multiple instruments to demonstrate different stages of the image formation pipeline."
+    "Now, it's time to configure the imaging instrument."
    ]
   },
   {
@@ -127,12 +127,11 @@
    "source": [
     "# Initialize the instrument\n",
     "ctf = cs.CTF(defocus_u=10000.0, defocus_v=10000.0, amplitude_contrast=0.07)\n",
-    "optics = cs.CTFOptics(ctf)\n",
-    "exposure = cs.Exposure(dose=op.Constant(10.0))\n",
-    "detector = cs.GaussianDetector(variance=op.Constant(1.0))\n",
-    "instrument_s = cs.Instrument(exposure=exposure)\n",
-    "instrument_o = cs.Instrument(exposure=exposure, optics=optics)\n",
-    "instrument_d = cs.Instrument(exposure=exposure, optics=optics, detector=detector)"
+    "optics = cs.WeakPhaseOptics(ctf)\n",
+    "detector = cs.GaussianDetector(electrons_per_angstrom=op.Constant(100.0))\n",
+    "instrument_s = cs.Instrument()\n",
+    "instrument_o = cs.Instrument(optics)\n",
+    "instrument_d = cs.Instrument(optics, detector)"
    ]
   },
   {
@@ -149,14 +148,14 @@
    "outputs": [],
    "source": [
     "# Then, choose a model for the solvent\n",
-    "solvent = cs.GaussianIce(variance=op.FourierExp2D(amplitude=4.0, scale=10.5))"
+    "solvent = cs.GaussianIce(variance=op.FourierExp2D(amplitude=1.0, scale=10.5))"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Finally, we can initialize our imaging model."
+    "Finally, we can initialize our `ImagePipeline`s"
    ]
   },
   {
@@ -166,15 +165,15 @@
    "outputs": [],
    "source": [
     "# Image formation models\n",
-    "scattering_model = cs.ImagePipeline(\n",
-    "    scattering=scattering, specimen=specimen, instrument=instrument_s\n",
-    ")  # , solvent=solvent)\n",
-    "optics_model = cs.ImagePipeline(\n",
-    "    scattering=scattering, specimen=specimen, instrument=instrument_o\n",
-    ")  # , solvent=solvent)\n",
-    "detector_model = cs.ImagePipeline(\n",
-    "    scattering=scattering, specimen=specimen, instrument=instrument_d\n",
-    ")  # , solvent=solvent)"
+    "scattering_pipeline = cs.ImagePipeline(\n",
+    "    scattering=scattering, specimen=specimen, instrument=instrument_s, solvent=solvent\n",
+    ")\n",
+    "optics_pipeline = cs.ImagePipeline(\n",
+    "    scattering=scattering, specimen=specimen, instrument=instrument_o, solvent=solvent\n",
+    ")\n",
+    "detector_pipeline = cs.ImagePipeline(\n",
+    "    scattering=scattering, specimen=specimen, instrument=instrument_d, solvent=solvent\n",
+    ")"
    ]
   },
   {
@@ -187,9 +186,9 @@
     "key = jax.random.PRNGKey(0)\n",
     "fig, axes = plt.subplots(ncols=3, figsize=(12, 6))\n",
     "ax1, ax2, ax3 = axes\n",
-    "im1 = plot_image(scattering_model(key), fig, ax1, label=\"Exit plane\")\n",
-    "im2 = plot_image(optics_model(key), fig, ax2, label=\"Detector plane\")\n",
-    "im3 = plot_image(detector_model(key), fig, ax3, label=\"Detector readout\")\n",
+    "im1 = plot_image(scattering_pipeline.sample(key), fig, ax1, label=\"Exit plane\")\n",
+    "im2 = plot_image(optics_pipeline.sample(key), fig, ax2, label=\"Detector plane\")\n",
+    "im3 = plot_image(detector_pipeline.sample(key), fig, ax3, label=\"Detector readout\")\n",
     "plt.tight_layout()"
    ]
   },
@@ -198,88 +197,14 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "fig, ax = plt.subplots()\n",
-    "plot_image(jnp.log10(jnp.abs(fftn(scattering_model(key)))), fig, ax)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Models can also include ``Filter``s. The following is a demonstration of a ``WhiteningFilter`` and a ``LowpassFilter``. These are precomputed upon initialization and applied automatically in the image formation pipeline. \n",
-    "\n",
-    "To compute a ``WhiteningFilter``, we first have to generate some synthetic data of structured noise from which we may compute its power spectrum."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Instantiate image filters\n",
-    "import cryojax.image as ci\n",
-    "\n",
-    "fig, axes = plt.subplot_mosaic(\n",
-    "    \"\"\"\n",
-    "AAAABBB\n",
-    "\"\"\",\n",
-    "    figsize=(6.5, 3.5),\n",
-    ")\n",
-    "key1, key2 = jax.random.split(jax.random.PRNGKey(1234))\n",
-    "micrograph_shape = (500, 500)\n",
-    "freqs = make_frequencies(micrograph_shape, pixel_size)\n",
-    "fourier_micrograph = optics.evaluate(freqs) * solvent.sample(key1, freqs)\n",
-    "fourier_micrograph = ci.normalize_image(\n",
-    "    detector.sample(key2, fourier_micrograph, freqs), is_real=False\n",
-    ")\n",
-    "micrograph = irfftn(fourier_micrograph, s=micrograph_shape)\n",
-    "whiten = op.WhiteningFilter(micrograph, config.padded_shape)\n",
-    "# whiten = op.WhiteningFilter(freqs[1:, 1:], micrograph, pixel_size)\n",
-    "plot_image(micrograph, fig, axes[\"A\"], label=\"Synthetic micrograph\")\n",
-    "plot_image(whiten.buffer, fig, axes[\"B\"], label=\"Whitening filter\")\n",
-    "plt.tight_layout()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Now generate an image with the toy icy structured noise model with a given whitening filter. We will also apply a low pass filter and a circular mask."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Show forward model for a whitened image\n",
-    "fig, ax = plt.subplots(figsize=(3.5, 3.5))\n",
-    "filter = (\n",
-    "    op.LowpassFilter(scattering.config.padded_frequency_grid.get(), cutoff=1.0) * whiten\n",
-    ")\n",
-    "mask = op.CircularMask(\n",
-    "    scattering.config.padded_coordinate_grid_in_angstroms.get(),\n",
-    "    radius=25 * pixel_size,\n",
-    ")\n",
-    "whitened_model = cs.ImagePipeline(\n",
-    "    scattering=scattering,\n",
-    "    specimen=specimen,\n",
-    "    instrument=instrument_d,\n",
-    "    filter=filter,\n",
-    "    mask=mask,\n",
-    ")\n",
-    "plot_image(whitened_model(), fig, ax)"
-   ]
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "cryojax",
    "language": "python",
-   "name": "python3"
+   "name": "cryojax"
   },
   "language_info": {
    "codemirror_mode": {
@@ -291,7 +216,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.13"
+   "version": "3.11.2"
   }
  },
  "nbformat": 4,
