give a whack at computing the true wavefunction... doesnt look right, but its getting there

--- a/tutorials/simulate-helix.ipynb
+++ b/tutorials/simulate-helix.ipynb
@@ -43,6 +43,7 @@
     "# Image simulator imports\n",
     "import cryojax.simulator as cs\n",
     "from cryojax.image import fftn, irfftn\n",
+    "from cryojax.image import operators as op\n",
     "from cryojax.io import read_array_with_spacing_from_mrc"
    ]
   },
@@ -122,7 +123,7 @@
     "subunit_potential = cs.FourierVoxelGrid.from_real_voxel_grid(\n",
     "    jnp.transpose(subunit_real_voxel_grid, axes=[2, 1, 0]),\n",
     "    subunit_voxel_size,\n",
-    "    pad_scale=1.2,\n",
+    "    pad_scale=1.5,\n",
     ")\n",
     "# ... and of the whole assembly\n",
     "assembly_real_voxel_grid, assembly_voxel_size = read_array_with_spacing_from_mrc(\n",
@@ -201,7 +202,32 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Now, create an instrument\n",
+    "ctf = cs.CTF(defocus_u=10000.0, defocus_v=10000.0, amplitude_contrast=0.07)\n",
+    "optics = cs.CTFOptics(ctf)\n",
+    "detector = cs.PoissonDetector(electrons_per_angstrom_squared=op.Constant(300.0))\n",
+    "instrument = cs.Instrument(optics, detector)\n",
+    "# ... and their respective pipelines\n",
+    "simulated = cs.AssemblyPipeline(helix, scattering, instrument)\n",
+    "truth = cs.ImagePipeline(true_assembly, scattering, instrument)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Sample from the instrument models\n",
+    "key = jax.random.PRNGKey(1234)\n",
+    "im1, im2 = simulated.render(), truth.render()\n",
+    "fig, axes = plot_images(\n",
+    "    [im1, im2],\n",
+    "    labels=[\"Cryojax Assembly\", \"Ground truth\"],\n",
+    ")\n",
+    "plt.tight_layout()"
+   ]
   }
  ],
  "metadata": {
