--- a/tutorials/simulate-image.ipynb
+++ b/tutorials/simulate-image.ipynb
@@ -127,8 +127,8 @@
    "source": [
     "# Initialize the instrument\n",
     "ctf = cs.CTF(defocus_u=10000.0, defocus_v=10000.0, amplitude_contrast=0.07)\n",
-    "optics = cs.WeakPhaseOptics(ctf)\n",
-    "detector = cs.GaussianDetector(electrons_per_angstrom_squared=op.Constant(100.0))\n",
+    "optics = cs.CTFOptics(ctf)\n",
+    "detector = cs.PoissonDetector(electrons_per_angstrom_squared=op.Constant(1000.0))\n",
     "instrument_s = cs.Instrument()\n",
     "instrument_o = cs.Instrument(optics)\n",
     "instrument_d = cs.Instrument(optics, detector)"
@@ -191,13 +191,6 @@
     "im3 = plot_image(detector_pipeline.sample(key), fig, ax3, label=\"Detector readout\")\n",
     "plt.tight_layout()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
