major simplifications at the sacrifice of stretching the truth at what i call the wavefunction. things look almost good, but definitely not simulating in true electron counts

--- a/tutorials/simulate-helix.ipynb
+++ b/tutorials/simulate-helix.ipynb
@@ -205,8 +205,8 @@
    "source": [
     "# Now, create an instrument\n",
     "ctf = cs.CTF(defocus_u=10000.0, defocus_v=10000.0, amplitude_contrast=0.07)\n",
-    "optics = cs.CTFOptics(ctf)\n",
-    "detector = cs.PoissonDetector(electrons_per_angstrom_squared=op.Constant(300.0))\n",
+    "optics = cs.WeakPhaseOptics(ctf)\n",
+    "detector = cs.GaussianDetector(electrons_per_angstrom_squared=op.Constant(10000.0))\n",
     "instrument = cs.Instrument(optics, detector)\n",
     "# ... and their respective pipelines\n",
     "simulated = cs.AssemblyPipeline(helix, scattering, instrument)\n",
@@ -221,7 +221,7 @@
    "source": [
     "# Sample from the instrument models\n",
     "key = jax.random.PRNGKey(1234)\n",
-    "im1, im2 = simulated.render(), truth.render()\n",
+    "im1, im2 = simulated.sample(key), truth.sample(key)\n",
     "fig, axes = plot_images(\n",
     "    [im1, im2],\n",
     "    labels=[\"Cryojax Assembly\", \"Ground truth\"],\n",
