--- a/tutorials/simulate-micrograph.ipynb
+++ b/tutorials/simulate-micrograph.ipynb
@@ -105,7 +105,7 @@
     "specimen = cs.Specimen(potential, poses)\n",
     "\n",
     "# ... and finally the instrument\n",
-    "optics = cs.CTFOptics()\n",
+    "optics = cs.WeakPhaseOptics()\n",
     "instrument = cs.Instrument(optics=optics)"
    ]
   },
