add custom behavior for computing the squared wavefunction. in the weak phase case, calibrate the squared wavefunction based on what the poisson rate should be for vacuum

--- a/tutorials/simulate-image.ipynb
+++ b/tutorials/simulate-image.ipynb
@@ -128,7 +128,7 @@
     "# Initialize the instrument\n",
     "ctf = cs.CTF(defocus_u=10000.0, defocus_v=10000.0, amplitude_contrast=0.07)\n",
     "optics = cs.WeakPhaseOptics(ctf)\n",
-    "detector = cs.PoissonDetector(electrons_per_angstrom_squared=op.Constant(1000.0))\n",
+    "detector = cs.PoissonDetector(electrons_per_angstrom_squared=op.Constant(30000.0))\n",
     "instrument_s = cs.Instrument()\n",
     "instrument_o = cs.Instrument(optics)\n",
     "instrument_d = cs.Instrument(optics, detector)"
@@ -188,7 +188,7 @@
     "ax1, ax2, ax3 = axes\n",
     "im1 = plot_image(scattering_pipeline.sample(key), fig, ax1, label=\"Exit plane\")\n",
     "im2 = plot_image(optics_pipeline.sample(key), fig, ax2, label=\"Detector plane\")\n",
-    "im3 = plot_image(detector_pipeline.sample(key), fig, ax3, label=\"Detector readout\")\n",
+    "im3 = plot_image(detector_pipeline.render(), fig, ax3, label=\"Detector readout\")\n",
     "plt.tight_layout()"
    ]
   }
