cleanup the Instrument, AbstractOptics, and CTF

--- a/tutorials/simulate-helix.ipynb
+++ b/tutorials/simulate-helix.ipynb
@@ -204,7 +204,7 @@
    "outputs": [],
    "source": [
     "# Now, create an instrument\n",
-    "ctf = cs.CTF(defocus_u=10000.0, defocus_v=10000.0, amplitude_contrast=0.07)\n",
+    "ctf = cs.CTF(defocus_u=10000.0, defocus_v=10000.0, amplitude_contrast_ratio=0.07)\n",
     "optics = cs.WeakPhaseOptics(ctf)\n",
     "detector = cs.GaussianDetector(electrons_per_angstrom_squared=op.Constant(40.0))\n",
     "instrument = cs.Instrument(optics, detector)\n",
