--- a/tutorials/simulate-image.ipynb
+++ b/tutorials/simulate-image.ipynb
@@ -126,11 +126,9 @@
    "outputs": [],
    "source": [
     "# Initialize the instrument\n",
-    "ctf = cs.CTF(defocus_u=10000.0, defocus_v=10000.0, amplitude_contrast=0.07)\n",
+    "ctf = cs.CTF(defocus_u=10000.0, defocus_v=10000.0, amplitude_contrast_ratio=0.07)\n",
     "optics = cs.WeakPhaseOptics(ctf)\n",
-    "detector = cs.PoissonDetector(\n",
-    "    electrons_per_angstrom_squared=op.Constant(1 / config.pixel_size**2)\n",
-    ")\n",
+    "detector = cs.PoissonDetector(electrons_per_angstrom_squared=op.Constant(100.0))\n",
     "instrument_s = cs.Instrument()\n",
     "instrument_o = cs.Instrument(optics)\n",
     "instrument_d = cs.Instrument(optics, detector)"
