--- a/tutorials/simulate-image.ipynb
+++ b/tutorials/simulate-image.ipynb
@@ -129,9 +129,8 @@
     "ctf = cs.CTF(defocus_u=10000.0, defocus_v=10000.0, amplitude_contrast_ratio=0.07)\n",
     "optics = cs.WeakPhaseOptics(ctf)\n",
     "detector = cs.PoissonDetector(electrons_per_angstrom_squared=op.Constant(100.0))\n",
-    "instrument_s = cs.Instrument()\n",
-    "instrument_o = cs.Instrument(optics)\n",
-    "instrument_d = cs.Instrument(optics, detector)"
+    "instrument_with_optics = cs.Instrument(optics)\n",
+    "instrument_with_optics_and_detector = cs.Instrument(optics, detector)"
    ]
   },
   {
@@ -166,13 +165,19 @@
    "source": [
     "# Image formation models\n",
     "scattering_pipeline = cs.ImagePipeline(\n",
-    "    scattering=scattering, specimen=specimen, instrument=instrument_s, solvent=solvent\n",
+    "    scattering=scattering, specimen=specimen, solvent=solvent\n",
     ")\n",
     "optics_pipeline = cs.ImagePipeline(\n",
-    "    scattering=scattering, specimen=specimen, instrument=instrument_o, solvent=solvent\n",
+    "    scattering=scattering,\n",
+    "    specimen=specimen,\n",
+    "    instrument=instrument_with_optics,\n",
+    "    solvent=solvent,\n",
     ")\n",
     "detector_pipeline = cs.ImagePipeline(\n",
-    "    scattering=scattering, specimen=specimen, instrument=instrument_d, solvent=solvent\n",
+    "    scattering=scattering,\n",
+    "    specimen=specimen,\n",
+    "    instrument=instrument_with_optics_and_detector,\n",
+    "    solvent=solvent,\n",
     ")"
    ]
   },
