fix the expression for the squared wavefunction. be careful to make gaussian sampling in fourier space independent of the number of pixels.

--- a/tutorials/simulate-image.ipynb
+++ b/tutorials/simulate-image.ipynb
@@ -106,7 +106,7 @@
     "# Configure the image formation process\n",
     "shape = (64, 64)\n",
     "pixel_size = 4.4  # Angstroms\n",
-    "config = cs.ImageConfig(shape, pixel_size, pad_scale=2)\n",
+    "config = cs.ImageConfig(shape, pixel_size, pad_scale=1)\n",
     "scattering = cs.FourierSliceExtract(\n",
     "    config, interpolation_order=1, interpolation_mode=\"fill\"\n",
     ")"
@@ -147,7 +147,9 @@
    "outputs": [],
    "source": [
     "# Then, choose a model for the solvent\n",
-    "solvent = cs.GaussianIce(variance=op.FourierExp2D(amplitude=1.0, scale=10.5))"
+    "solvent = cs.GaussianIce(\n",
+    "    variance=op.Lorenzian(amplitude=0.001, scale=2 * config.pixel_size)\n",
+    ")"
    ]
   },
   {
