sampling from gaussians needs to scale the noise by the standard deviation, not variance

--- a/tutorials/simulate-image.ipynb
+++ b/tutorials/simulate-image.ipynb
@@ -127,8 +127,9 @@
    "source": [
     "# Initialize the instrument\n",
     "ctf = cs.CTF(defocus_u=10000.0, defocus_v=10000.0, amplitude_contrast_ratio=0.07)\n",
+    "electrons_per_angstrom_squared = op.Constant(100.0)\n",
     "optics = cs.WeakPhaseOptics(ctf)\n",
-    "detector = cs.PoissonDetector(electrons_per_angstrom_squared=op.Constant(100.0))\n",
+    "detector = cs.PoissonDetector(electrons_per_angstrom_squared)\n",
     "instrument_with_optics = cs.Instrument(optics)\n",
     "instrument_with_optics_and_detector = cs.Instrument(optics, detector)"
    ]
@@ -148,7 +149,7 @@
    "source": [
     "# Then, choose a model for the solvent\n",
     "solvent = cs.GaussianIce(\n",
-    "    variance=op.Lorenzian(amplitude=0.001, scale=2 * config.pixel_size)\n",
+    "    variance=op.Lorenzian(amplitude=0.002**2, scale=4 * config.pixel_size)\n",
     ")"
    ]
   },
