--- a/tutorials/simulate-image.ipynb
+++ b/tutorials/simulate-image.ipynb
@@ -126,12 +126,13 @@
    "outputs": [],
    "source": [
     "# Initialize the instrument\n",
-    "ctf = cs.CTF(defocus_u=10000.0, defocus_v=10000.0, amplitude_contrast_ratio=0.07)\n",
-    "electrons_per_angstrom_squared = op.Constant(100.0)\n",
-    "optics = cs.WeakPhaseOptics(ctf)\n",
-    "detector = cs.PoissonDetector(electrons_per_angstrom_squared)\n",
+    "dose = cs.ElectronDose(electrons_per_angstrom_squared=op.Constant(100.0))\n",
+    "optics = cs.WeakPhaseOptics(\n",
+    "    ctf=cs.CTF(defocus_u=10000.0, defocus_v=10000.0, amplitude_contrast_ratio=0.07)\n",
+    ")\n",
+    "detector = cs.PoissonDetector(dqe=cs.IdealDQE())\n",
     "instrument_with_optics = cs.Instrument(optics)\n",
-    "instrument_with_optics_and_detector = cs.Instrument(optics, detector)"
+    "instrument_with_optics_and_detector = cs.Instrument(optics, dose, detector)"
    ]
   },
   {
