--- a/tutorials/simulate-image.ipynb
+++ b/tutorials/simulate-image.ipynb
@@ -126,11 +126,11 @@
    "outputs": [],
    "source": [
     "# Initialize the instrument\n",
-    "dose = cs.ElectronDose(electrons_per_angstrom_squared=op.Constant(100.0))\n",
+    "dose = cs.ElectronDose(electrons_per_angstrom_squared=100.0)\n",
     "optics = cs.WeakPhaseOptics(\n",
     "    ctf=cs.CTF(defocus_u=10000.0, defocus_v=10000.0, amplitude_contrast_ratio=0.07)\n",
     ")\n",
-    "detector = cs.PoissonDetector(dqe=cs.IdealDQE())\n",
+    "detector = cs.PoissonDetector(dqe=cs.IdealDQE(fraction_detected_electrons=1.0))\n",
     "instrument_with_optics = cs.Instrument(optics)\n",
     "instrument_with_optics_and_detector = cs.Instrument(optics, dose, detector)"
    ]
